--- a/VotingWeb/Views/Home/Index.cshtml
+++ b/VotingWeb/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-xs-8 col-xs-offset-2">
                 <form class="col-xs-12 center-block">
                     <div class="col-xs-6 form-group">
-                        <input id="txtAdd" type="text" class="form-control" placeholder="Add voting option" ng-model="item"/>
+                        <input id="txtAdd" type="text" class="form-control" placeholder="Add voting option" ng-model="item" />
                     </div>
                     <button id="btnAdd" class="btn btn-default" ng-click="add(item)">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -21,7 +21,7 @@
                 </form>
             </div>
         </div>
-        <hr/>
+        <hr />
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="row">
@@ -33,10 +33,10 @@
                     <div class="col-xs-8">
                         <button class="btn btn-success text-left btn-block" ng-click="add(vote.Key)">
                             <span class="pull-left">
-                                {​​{​​vote.key}​​}​​
+                                {{vote.key}}
                             </span>
                             <span class="badge pull-right">
-                                {​​{​​vote.value}​​}​​ Votes
+                                {{vote.value}} Votes
                             </span>
                         </button>
                     </div>
